# RxFramework

./: .gitignore  CMakeLists.txt  Config.cmake.in  Makefile  README.MD  SDL_GraphConfig.cmake  SDL_GraphTargets.cmake  build.ninja  install_manifest.txt
Graphics/: DrawAbleSprite.hpp  RxFrame.cpp  RxFrame.hpp
Graphics/Components/Label/: RxLabel.cpp  RxLabel.hpp
Graphics/Components/Template/: RxComponent.cpp  RxComponent.hpp
__cmake_systeminformation/: results.txt
include/: DrawAbleSprite.hpp  RxComponent.hpp  RxFrame.hpp  RxLabel.hpp
include/SDL_Graph/: RxFrame.hpp
include/SDL_Graph/Components/: DrawAbleSprite.hpp  Rectangle.hpp  RxComponent.hpp
include/SDL_Graph/Lib/: Graphics.hpp  RxFrame.hpp
include/SDL_Graph/Primitives/: Vector.hpp
src/: DrawAbleSprite.cpp  Graphics.cpp  RxComponent.cpp  RxFrame.cpp  RxLabel.cpp  main.cpp
